--- a/public/css/css1.css
+++ b/public/css/css1.css
@@ -37,7 +37,7 @@ body
 
 .navClass1
 {
-    z-index: relative;
+    /*z-index: relative;*/
     padding-left: 35px; 
     margin-top: 70px; 
     padding-top: 2px; 
@@ -64,6 +64,7 @@ body
 {
     background-color: rgb(64, 79, 104); 
     padding: 2px;
+    bottom: ;
 }
 
 .divClass3
@@ -107,8 +108,8 @@ body
 
 .divBreakClass2
 {
-    margin-top: 20px; 
-    padding-bottom: 30px;
+    //margin-top: 20px; 
+    //padding-bottom: 30px;
 }
 
 .divBreakClass3 
@@ -139,4 +140,12 @@ body
 {
     justify-content: space-around; 
     align-items: center; height: 100px;
+}
+footer{
+    bottom: 0;
+    width: 100%;
+}
+
+a{
+    text-decoration: none;
 }
